--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/wangliuyong/vue-ui#readme",
   "dependencies": {
     "vue": "^2.6.8"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.11.0"
   }
 }
