--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@ node_modules/
 .cache/
 dist/
 note.txt
+.idea/dictionaries/
+.idea/encodings.xml
+.idea/fileTemplates/
+.idea/inspectionProfiles/
+.idea/misc.xml
+.idea/modules.xml
+.idea/vue-ui.iml
+.idea/workspace.xml
+npm
+npx
+package-lock.json
+paecel
+parcel
+until/
