--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
 node_modules/
 .cache/
 dist/
-note.txt
-.idea/dictionaries/
-.idea/encodings.xml
-.idea/fileTemplates/
-.idea/inspectionProfiles/
-.idea/misc.xml
-.idea/modules.xml
-.idea/vue-ui.iml
 .idea/workspace.xml
 npm
 npx
@@ -16,3 +8,4 @@ package-lock.json
 paecel
 parcel
 until/
+/note.txt
