--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "一个vue的框架",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx parcel index.html --no-cache"
   },
   "repository": {
     "type": "git",
